底层架构大升级，走统一管线设计，大幅提升后续扩展和功能复用能力